@@ -12,8 +12,8 @@ prGetStatistics(x, show_perc = FALSE, html = TRUE, digits = 1,
 \arguments{
   \item{x}{The variable that you want the statistics for}
 
-  \item{html}{If HTML compatible output shoudl be used
-  instead of default LaTeX}
+  \item{html}{If HTML compatible output should be used. If
+  \code{FALSE} it outputs LaTeX formatting}
 
   \item{digits}{The number of decimals used}
 
